# compiler-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compLabAluno.bash  compare_diffs.py  tm  tm.c
example/: block2.cm
scripts/: runLEXdiff  rundetaildiff  rundiff
src/: analyze.c  analyze.h  cgen.c  cgen.h  cminus.l  cminus.y  code.c  code.h  globals.h  hash.c  hash.h  main.c  parse.h  scan.h  symtab.c  symtab.h  util.c  util.h
